just need to fix nav bar spacing at top

--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -43,3 +43,15 @@ min-height: 90%;
     width: 100%;
     height: auto;
 }
+
+
+
+
+//new nav bar stuff:
+.hidden{
+    display:none;
+}
+
+.unhidden{
+    display:block;
+}
